feat(c2a): withdraw open game registrations
